test/sema/methods/pointer_call_ref_decay_wrong_mutability.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
trait A {
  fn foo(self: borrowed mut Self) {}
}

struct S {
  impl A;
}

fn main() {
  let s = gc(S{});

  // CHECK: [[# @LINE + 1 ]]:3: error: cannot unify '*S' with 'borrowed mut S'
  s.foo();
}
